feat: 入場可能回数のログ見れるようにした
