# entrance-system/api/router/user_router.go
@@ -19,5 +19,7 @@ func SetupUserRoutes(router *gin.Engine, userHandler *handler.UserHandler) {
 		userGroup.GET("/:user_id/roles", userHandler.GetRolesByUserID)
 		userGroup.POST("/:user_id/roles", userHandler.AddRoleToUser)
 		userGroup.DELETE("/:user_id/roles/:role_id", userHandler.RemoveRoleFromUser)
+
+		userGroup.GET("/:user_id/logs", userHandler.GetUserLogs)
 	}
 }
